--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -108,7 +108,7 @@
             <div
               class="w-2/3 m-2 text-center shadow bg-bTeam-300 shadow-bTeam-600 rounded-xl"
             >
-              Are you sure you want to delete?
+              Are you sure you want to delete? This can not be undone.
             </div>
             <div
               class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-bTeam-300 hover:shadow shadow-bTeam-600 rounded-xl"
