--- a/src/app/draft-overview/draft-archives/draft-archives.component.html
+++ b/src/app/draft-overview/draft-archives/draft-archives.component.html
@@ -58,7 +58,7 @@
           <div
             class="w-2/3 m-2 text-center shadow bg-aTeam-300 shadow-aTeam-600 rounded-xl"
           >
-            Are you sure you want to delete?
+            Are you sure you want to delete? This can not be undone.
           </div>
           <div
             class="flex items-center justify-center w-1/6 m-2 shadow cursor-pointer bg-aTeam-300 hover:shadow shadow-aTeam-600 rounded-xl"
