--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -56,13 +56,13 @@
               title="Edit"
               alt="Edit"
             ></edit-svg>
-            <archive-svg
+            <archive-add-svg
               class="w-8 h-8 p-1 shadow rounded-xl bg-aTeam-300 hover:cursor-pointer hover:shadow shadow-aTeam-600"
               alt="Archive"
               title="Archive"
               (click)="draft.menu = 'archive'"
             >
-            </archive-svg>
+            </archive-add-svg>
           </div>
         </div>
         <div class="flex" *ngIf="draft.menu == 'archive'">
@@ -128,11 +128,21 @@
       </div>
     </div>
   </div>
-  <button
-    [routerLink]="'/draft/new'"
-    class="flex items-center p-1 m-3 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
-    title="Add League"
-  >
-    <plus-svg class="w-6"></plus-svg>
-  </button>
+  <div class="flex p-3">
+    <button
+      [routerLink]="'/draft/new'"
+      class="flex items-center p-1 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
+      title="Add League"
+    >
+      <plus-svg class="w-8"></plus-svg>
+    </button>
+    <div class="flex-grow"></div>
+    <button
+      [routerLink]="'/draft/archives'"
+      class="flex items-center p-1 rounded-lg shadow-md bg-aTeam-300 hover:shadow shadow-aTeam-600"
+      title="Archives"
+    >
+      <archive-svg class="w-8"></archive-svg>
+    </button>
+  </div>
 </div>
