add new spriteset

--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -43,6 +43,7 @@
           <option value="sv">Pokemon Showdown - SV</option>
           <option value="bw">Pokemon Showdown - BW</option>
           <option value="afd">Pokemon Showdown - AFD</option>
+          <option value="pmd">PMD Sprite Project</option>
         </select>
       </div>
     </div>
