--- a/src/app/draft-overview/draft-preview/draft-preview.component.html
+++ b/src/app/draft-overview/draft-preview/draft-preview.component.html
@@ -30,7 +30,7 @@
               {{ draft.format }}
             </div>
           </div>
-          <div class="grid grid-cols-6 px-4 pt-2 sprites">
+          <div class="grid grid-cols-6 gap-1 px-4 pt-2 sprites">
             <sprite
               *ngFor="let pokemon of draft.team"
               [pokemon]="pokemon"
