--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -4,10 +4,10 @@
     class="hidden w-1/6 p-1 border-2 max-w-28 sm:block bg-aTeam-100 border-aTeam-200 rounded-xl"
   >
     <div
-      class="h-auto p-1 m-1 shadow-md sm:p-2 sm:m-2 bg-aTeam-300 rounded-xl shadow-aTeam-600"
+      class="h-auto p-1 m-1 shadow-md sm:p-2 sm:m-2 bg-aTeam-300 rounded-xl shadow-aTeam-600 grid grid-cols-1 gap-1"
     >
       <sprite
-        class="flex justify-center"
+        class=""
         *ngFor="let pokemon of draft.team"
         [pokemon]="pokemon"
         [flipped]="true"
@@ -55,7 +55,7 @@
                 {{ matchup.stage }}
               </div>
             </div>
-            <div class="grid grid-cols-6 px-4 pt-2 sprites">
+            <div class="grid grid-cols-6 gap-1 px-4 pt-2 sprites">
               <sprite
                 *ngFor="let pokemon of matchup.bTeam.team"
                 [pokemon]="pokemon"
