--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -33,18 +33,21 @@
       </div>
       <div class="p-1">
         <label class="block mb-1 font-bold">Sprite Set</label>
-        <select
-          class="bg-menu-200 border border-menu-200 rounded p-1"
-          formControlName="spriteSet"
-        >
-          <option value="home">Pokemon Home</option>
-          <option value="serebii">Serebii</option>
-          <option value="ani">Pokemon Showdown - Animated</option>
-          <option value="sv">Pokemon Showdown - SV</option>
-          <option value="bw">Pokemon Showdown - BW</option>
-          <option value="afd">Pokemon Showdown - AFD</option>
-          <option value="pmd">PMD Sprite Project</option>
-        </select>
+        <div class="flex space-x-4 items-center">
+          <select
+            class="bg-menu-200 h-fit border border-menu-200 rounded p-1"
+            formControlName="spriteSet"
+          >
+            <option value="home">Pokemon Home</option>
+            <option value="serebii">Serebii</option>
+            <option value="ani">Pokemon Showdown - Animated</option>
+            <option value="sv">Pokemon Showdown - SV</option>
+            <option value="bw">Pokemon Showdown - BW</option>
+            <option value="afd">Pokemon Showdown - AFD</option>
+            <option value="pmd">PMD Sprite Project</option>
+          </select>
+          <sprite [pokemon]="example" class="h-20"></sprite>
+        </div>
       </div>
     </div>
     <!-- {{ settingsForm.value | json }} -->
