logo is dynamic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -57,11 +57,7 @@
         routerLink="/"
         class="flex items-center justify-center w-20 rounded hover:cursor-pointer hover:bg-menu-200"
       >
-        <img
-          src="../assets/logo.png"
-          class="text-xl font-semibold"
-          alt="DraftZone"
-        />
+        <div class="w-full"><logo-svg alt="DraftZone"></logo-svg></div>
       </div>
       <div class="hidden px-2 space-x-2 sm:flex font-nasa">
         <div
