--- a/src/app/draft-overview/draft-archives/draft-archives.component.html
+++ b/src/app/draft-overview/draft-archives/draft-archives.component.html
@@ -39,7 +39,7 @@
           <div class="grid grid-cols-6 px-4 pt-2 sprites">
             <sprite
               *ngFor="let pokemon of archive.team"
-              [pokemon]="{ pid: pokemon.pid, name: pokemon.name }"
+              [pokemon]="{ id: pokemon.id, name: pokemon.name }"
             ></sprite>
           </div>
         </div>
