--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -149,7 +149,7 @@
                 <div class="w-1/8 h-fit">
                   <sprite
                     [pokemon]="{
-                      pid: teamCtrl.get('pid')?.value,
+                      id: teamCtrl.get('id')?.value,
                       name: teamCtrl.get('name')?.value
                     }"
                   ></sprite>
@@ -278,7 +278,7 @@
                   <div class="w-1/8 h-fit">
                     <sprite
                       [pokemon]="{
-                        pid: teamCtrl.get('pid')?.value,
+                        id: teamCtrl.get('id')?.value,
                         name: teamCtrl.get('name')?.value
                       }"
                     ></sprite>
