--- a/src/app/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemon-form/pokemon-form.component.html
@@ -3,7 +3,7 @@
     <sprite
       class="col-span-2 sm:col-span-1"
       [pokemon]="{
-        pid: pokemonForm.value.pid,
+        id: pokemonForm.value.id,
         name: pokemonForm.value.name,
         shiny: pokemonForm.value.shiny
       }"
