--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -134,7 +134,7 @@
                 <div class="w-20">
                   <sprite
                     [pokemon]="{
-                      pid: mon.formes[mon.formes.length - 1].id,
+                      id: mon.formes[mon.formes.length - 1].id,
                       name: mon.formes[mon.formes.length - 1].detail.split(
                         ','
                       )[0]
