--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -50,6 +50,19 @@
       <h2 class="pb-2 text-2xl font-bold">News and Updates</h2>
       <ul class="space-y-3">
         <li>
+          <h2 class="text-xl font-semibold">August 15th, 2024</h2>
+          <h3 class="pl-4">
+            <div class="font-semibold">
+              Thank you for all the support! We have had a lot of new members
+              recently; words definitely getting out. As a happy result, the
+              servers been taking longer than wanted to create matchup pages. I
+              have been rewriting the server code to speed things up, and will
+              continue over the next week. Once things get rolling smooth again,
+              I have several new features to be implemented so stay tuned!
+            </div>
+          </h3>
+        </li>
+        <li>
           <h2 class="text-xl font-semibold">July 8th, 2024</h2>
           <h3 class="pl-4">
             <div class="font-semibold">
