fix gametype formating

--- a/src/app/tools/replay_analyzer/replay.component.html
+++ b/src/app/tools/replay_analyzer/replay.component.html
@@ -41,10 +41,7 @@
         <label class="font-semibold text-symbolColor-sub" for="format">
           Format:
         </label>
-        <span id="format">{{
-          replayData.gametype.charAt(0).toUpperCase() +
-            replayData.gametype.slice(1)
-        }}</span>
+        <span id="format">{{ replayData.gametype }}</span>
       </div>
       <div>
         <label class="font-semibold text-symbolColor-sub" for="gen">
