--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -52,7 +52,7 @@
         <li>
           <h2 class="text-xl font-semibold">August 15th, 2024</h2>
           <h3 class="pl-4">
-            <div class="font-semibold">
+            <div>
               Thank you for all the support! We have had a lot of new members
               recently; words definitely getting out. As a happy result, the
               servers been taking longer than wanted to create matchup pages. I
