improve move category looks and resize z svg

--- a/src/app/planner/moves/moves.component.html
+++ b/src/app/planner/moves/moves.component.html
@@ -3,6 +3,7 @@
     <move-category
       *ngFor="let category of this.movechart"
       [category]="category"
+      [cols]="2"
     >
     </move-category>
   </div>
