--- a/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
+++ b/src/app/matchup-overview/matchup/movechart/move-category/move-category.component.html
@@ -13,20 +13,20 @@
   </div>
 </div>
 
-<div *ngIf="show" @growIn>
+<div *ngIf="show" @growIn class="z-10 grid gap-x-1" [ngClass]="getCols()">
   <div
-    class="z-10 flex border-y border-menu-400 bg-menu-200"
+    class="flex border-y border-menu-400 bg-menu-200"
     *ngFor="let move of category.moves"
   >
     <div class="flex items-center w-1/3 p-1 border-r border-menu-400">
-      <div
-        class="flex justify-center w-full py-1 font-semibold text-center border-2 rounded"
+      <p
+        class="w-full py-1 font-semibold text-xs md:text-sm text-center overflow-hidden border-2 rounded"
         [ngClass]="typeBorder(move.type)"
       >
         {{ move.name }}
-      </div>
+      </p>
     </div>
-    <div class="flex flex-row flex-wrap items-center w-2/3 px-1">
+    <div class="flex flex-row flex-wrap items-center w-2/3 p-1">
       <sprite
         class="h-8"
         *ngFor="let pokemon of move.pokemon"
