--- a/src/app/tools/finder/finder.component.html
+++ b/src/app/tools/finder/finder.component.html
@@ -10,7 +10,7 @@
 </div>
 
 <div>
-  <input type="text" class="border w-96" [(ngModel)]="finalQuery" readonly />
+  <input type="text" class="border w-96" [(ngModel)]="finalQuery" />
   <button (click)="find()">Find</button>
 </div>
 
