--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div
-  class="flex flex-col justify-between h-dvh text-symbolColor-main bg-page"
+  class="flex flex-col justify-between h-dvh text-symbolColor-main font-nunito bg-page"
   [ngClass]="getTheme()"
   (click)="outer()"
 >
