--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -135,9 +135,9 @@
             <div
               class="sticky flex w-full items-center font-semibold border-b-2 border-menu-300"
             >
-              <div class="w-1/8 h-full"></div>
-              <div class="w-1/2">Name</div>
-              <div class="w-1/8 text-center text-xs">Value</div>
+              <div class="w-1/6 h-full"></div>
+              <div class="w-[45%]">Name</div>
+              <div class="w-1/6 text-center text-xs">Value</div>
               <div class="w-1/8 text-center text-xs">Captain</div>
               <div class="w-1/8 text-center text-xs">Drafted</div>
             </div>
@@ -147,7 +147,7 @@
                 [formGroupName]="i"
                 class="flex items-center space-y-1"
               >
-                <div class="w-1/8 h-fit">
+                <div class="w-1/6 h-fit">
                   <sprite
                     [pokemon]="{
                       id: teamCtrl.get('id')?.value,
@@ -155,11 +155,11 @@
                     }"
                   ></sprite>
                 </div>
-                <div class="w-1/2 h-full p-2">
+                <div class="w-5/12 h-full flex flex-col justify-center p-2">
                   <input
                     type="text"
                     spellcheck="false"
-                    class="w-full h-full text-sm px-1 text-ellipsis border rounded-lg bg-menu-100"
+                    class="w-full text-sm px-1 py-1 text-ellipsis border rounded-lg bg-menu-100"
                     [ngClass]="minMaxStyle(i)"
                     formControlName="name"
                   />
@@ -168,20 +168,26 @@
                     (querySelected)="resultSelected(teamCtrl, $event)"
                   ></filter>
                 </div>
-                <div class="w-1/8 p-1" *ngIf="!isPoints">
+                <div
+                  class="w-1/6 h-full flex flex-col justify-center p-1"
+                  *ngIf="!isPoints"
+                >
                   <input
                     type="text"
                     spellcheck="false"
                     [ngClass]="minMaxStyle(i)"
-                    class="w-full p-1 font-semibold text-center border rounded-lg bg-menu-100"
+                    class="w-full px-1 py-1 font-semibold text-center border rounded-lg bg-menu-100"
                     formControlName="tier"
                   />
                 </div>
-                <div class="w-1/8 p-1" *ngIf="isPoints">
+                <div
+                  class="w-1/6 h-full flex flex-col justify-center p-1"
+                  *ngIf="isPoints"
+                >
                   <input
                     type="number"
                     placeholder="0"
-                    class="w-full p-1 text-center border rounded-lg bg-menu-100"
+                    class="w-full px-1 py-1 text-center border rounded-lg bg-menu-100"
                     [ngClass]="minMaxStyle(i)"
                     formControlName="value"
                   />
