--- a/src/app/planner/planner.component.html
+++ b/src/app/planner/planner.component.html
@@ -2,7 +2,7 @@
   <button type="submit" style="display: none"></button>
   <div formArrayName="drafts" class="flex flex-col h-full">
     <div
-      class="flex items-center p-1 space-x-1 overflow-x-auto border-b-2 overflow-y-clip h-fit bg-menu-200 border-menu-300"
+      class="flex items-center p-1 space-x-1 border-b-2 overflow-y-clip h-fit bg-menu-200 border-menu-300"
     >
       <div
         class="flex items-center font-semibold w-20 px-1 py-0.5 border bg-menu-100 hover:bg-menu-50 hover:cursor-pointer rounded border-menu-500"
@@ -12,10 +12,10 @@
         <div *ngIf="!settings" class="px-1">Show</div>
         <div *ngIf="settings" class="px-1">Hide</div>
       </div>
-      <div class="flex w-full p-0.5 space-x-2">
+      <div class="flex w-full p-0.5 space-x-2 overflow-x-auto scrollbar-hidden">
         <div
           [ngClass]="selectedDraftsStyle(j)"
-          class="flex overflow-x-auto border rounded border-menu-500 hover:cursor-pointer"
+          class="flex border rounded border-menu-500 hover:cursor-pointer"
           *ngFor="let draftCtrl of draftArray.controls; let j = index"
           [formGroupName]="j"
           (click)="switchDrafts(j)"
@@ -28,7 +28,7 @@
         </div>
         <button *ngIf="draftSize < 5" (click)="addDraft()" c>
           <div
-            class="h-8 p-1 border rounded border-menu-500 bg-menu-100 hover:bg-menu-50 hover:cursor-pointer"
+            class="h-8 w-8 p-1 border rounded border-menu-500 bg-menu-100 hover:bg-menu-50 hover:cursor-pointer"
           >
             <plus-svg></plus-svg>
           </div>
@@ -136,7 +136,7 @@
               class="sticky flex w-full items-center font-semibold border-b-2 border-menu-300"
             >
               <div class="w-1/6 h-full"></div>
-              <div class="w-[45%]">Name</div>
+              <div class="w-5/12">Name</div>
               <div class="w-1/6 text-center text-xs">Value</div>
               <div class="w-1/8 text-center text-xs">Captain</div>
               <div class="w-1/8 text-center text-xs">Drafted</div>
@@ -267,7 +267,7 @@
               [typechart]="typechart"
             ></typechart>
             <moves
-              class="overflow-y-auto"
+              class="overflow-y-auto w-full"
               *ngIf="tabSelected == 2 && movechart.length"
               [movechart]="movechart"
             ></moves>
@@ -278,18 +278,19 @@
               <div
                 class="sticky flex w-full space-x-3 font-semibold border-b-2 border-menu-300"
               >
-                <div class="w-1/8"></div>
-                <div class="w-1/2">Name</div>
-                <div class="w-1/4">Value</div>
-                <div class="w-1/8">Capt</div>
+                <div class="w-1/6 h-full"></div>
+                <div class="w-5/12">Name</div>
+                <div class="w-1/6 text-center text-xs">Value</div>
+                <div class="w-1/8 text-center text-xs">Captain</div>
+                <div class="w-1/8 text-center text-xs">Drafted</div>
               </div>
               <div formArrayName="team" class="grid w-full grid-cols-1">
                 <div
                   *ngFor="let teamCtrl of teamFormArray.controls; let i = index"
                   [formGroupName]="i"
-                  class="flex items-center space-x-4 space-y-2"
+                  class="flex items-center space-y-1"
                 >
-                  <div class="w-1/8 h-fit">
+                  <div class="w-1/6 h-fit">
                     <sprite
                       [pokemon]="{
                         id: teamCtrl.get('id')?.value,
@@ -297,10 +298,11 @@
                       }"
                     ></sprite>
                   </div>
-                  <div class="w-1/2">
+                  <div class="w-5/12 h-full flex flex-col justify-center p-2">
                     <input
                       type="text"
-                      class="w-full p-1 border rounded-lg"
+                      spellcheck="false"
+                      class="w-full text-sm px-1 py-1 text-ellipsis border rounded-lg bg-menu-100"
                       [ngClass]="minMaxStyle(i)"
                       formControlName="name"
                     />
@@ -309,19 +311,26 @@
                       (querySelected)="resultSelected(teamCtrl, $event)"
                     ></filter>
                   </div>
-                  <div class="w-1/4" *ngIf="!isPoints">
+                  <div
+                    class="w-1/6 h-full flex flex-col justify-center p-1"
+                    *ngIf="!isPoints"
+                  >
                     <input
                       type="text"
+                      spellcheck="false"
                       [ngClass]="minMaxStyle(i)"
-                      class="w-full p-1 font-semibold text-center border rounded-lg"
+                      class="w-full px-1 py-1 font-semibold text-center border rounded-lg bg-menu-100"
                       formControlName="tier"
                     />
                   </div>
-                  <div class="w-1/4" *ngIf="isPoints">
+                  <div
+                    class="w-1/6 h-full flex flex-col justify-center p-1"
+                    *ngIf="isPoints"
+                  >
                     <input
                       type="number"
-                      class="w-full p-1 text-center border rounded-lg"
                       placeholder="0"
+                      class="w-full px-1 py-1 text-center border rounded-lg bg-menu-100"
                       [ngClass]="minMaxStyle(i)"
                       formControlName="value"
                     />
@@ -331,6 +340,13 @@
                       type="checkbox"
                       class="w-full"
                       formControlName="capt"
+                    />
+                  </div>
+                  <div class="w-1/8">
+                    <input
+                      type="checkbox"
+                      class="w-full"
+                      formControlName="drafted"
                     />
                   </div>
                 </div>
