--- a/src/app/planner/typechart/typechart.component.html
+++ b/src/app/planner/typechart/typechart.component.html
@@ -1,28 +1,27 @@
 <div
-  class="flex flex-col max-h-full border-4 w-fit border-menu-400 bg-menu-100"
+  class="flex flex-col max-h-full border-4 max-w-full border-menu-400 bg-menu-100"
 >
-  <div>
+  <div class="overflow-x-auto">
     <table class="table-fixed">
       <thead>
         <tr>
           <th class="w-12 border-r-4 border-r-menu-400"></th>
-          <th
-            class="w-8 border-b-2 bg-menu-300 border-menu-400"
-            *ngFor="let type of types"
-          >
-            <img
-              class=""
-              src="../../../assets/icons/types/{{ type }}.png"
-              onerror="this.src='../../../assets/icons/types/Unknown.png'"
-              alt="{{ type }}"
-            />
+          <th class="flex space-x-0.5 bg-menu-300 border-b-2 border-menu-400">
+            <div
+              class="w-10 flex space-x-1 items-center justify-center"
+              *ngFor="let type of types"
+            >
+              <img
+                class=""
+                src="../../../assets/icons/types/{{ type }}.png"
+                onerror="this.src='../../../assets/icons/types/Unknown.png'"
+                alt="{{ type }}"
+              />
+            </div>
           </th>
         </tr>
       </thead>
-    </table>
-  </div>
-  <div class="overflow-y-auto scrollbar-hidden" style="max-height: 400px">
-    <table class="table-fixed flex-grow">
+
       <tbody>
         <tr *ngFor="let pokemon of typechart.team">
           <th
@@ -34,32 +33,33 @@
               [class.opacity-60]="pokemon.disabled"
             ></sprite>
           </th>
-          <td
-            *ngFor="let type of types"
-            class="w-8 text-center border"
-            [ngClass]="typeColor(pokemon.weak[type], pokemon.disabled!)"
-          >
-            {{ pokemon.weak[type] }}
+          <td class="flex h-12 space-x-0.5">
+            <div
+              *ngFor="let type of types"
+              class="w-10 h-full border flex items-center justify-center"
+              [ngClass]="typeColor(pokemon.weak[type], pokemon.disabled!)"
+            >
+              <span> {{ pokemon.weak[type] }}</span>
+            </div>
           </td>
         </tr>
       </tbody>
-    </table>
-  </div>
-  <div>
-    <table class="table-fixed">
+
       <thead class="border-b-4 border-menu-400">
         <tr>
-          <th class="w-12 border-l border-r-4 border-r-menu-400"></th>
-          <th
-            class="w-8 border-t-2 bg-menu-300 border-menu-400"
-            *ngFor="let type of types"
-          >
-            <img
-              class=""
-              src="../../../assets/icons/types/{{ type }}.png"
-              onerror="this.src='../../../assets/icons/types/Unknown.png'"
-              alt="{{ type }}"
-            />
+          <th class="w-12 border-r-4 border-r-menu-400"></th>
+          <th class="flex space-x-0.5 border-b-2 bg-menu-300 border-menu-400">
+            <div
+              class="w-10 flex items-center justify-center"
+              *ngFor="let type of types"
+            >
+              <img
+                class=""
+                src="../../../assets/icons/types/{{ type }}.png"
+                onerror="this.src='../../../assets/icons/types/Unknown.png'"
+                alt="{{ type }}"
+              />
+            </div>
           </th>
         </tr>
       </thead>
@@ -70,12 +70,14 @@
           >
             Weaks
           </th>
-          <td
-            *ngFor="let weakness of weaknesses"
-            class="text-center border"
-            [ngClass]="weakColor(weakness)"
-          >
-            {{ weakness }}
+          <td class="flex space-x-0.5">
+            <div
+              *ngFor="let weakness of weaknesses"
+              class="text-center border h-full w-10"
+              [ngClass]="diffColor(weakness)"
+            >
+              {{ weakness | number : "1.0-0" }}
+            </div>
           </td>
         </tr>
         <tr>
@@ -84,12 +86,14 @@
           >
             Resists
           </th>
-          <td
-            *ngFor="let resistance of resistances"
-            class="text-center border"
-            [ngClass]="resistColor(resistance)"
-          >
-            {{ resistance }}
+          <td class="flex space-x-0.5">
+            <div
+              *ngFor="let resistance of resistances"
+              class="text-center border h-full w-10"
+              [ngClass]="diffColor(resistance)"
+            >
+              {{ resistance | number : "1.0-0" }}
+            </div>
           </td>
         </tr>
         <tr>
@@ -98,12 +102,14 @@
           >
             Diff
           </th>
-          <td
-            *ngFor="let diff of difference"
-            class="text-center border"
-            [ngClass]="diffColor(diff)"
-          >
-            {{ diff }}
+          <td class="flex space-x-0.5">
+            <div
+              *ngFor="let diff of difference"
+              class="text-center border h-full w-10"
+              [ngClass]="diffColor(diff)"
+            >
+              {{ diff | number : "1.0-0" }}
+            </div>
           </td>
         </tr>
         <tr>
@@ -112,12 +118,14 @@
           >
             Log
           </th>
-          <td
-            *ngFor="let diff of differential"
-            class="text-center border"
-            [ngClass]="diffColor(diff)"
-          >
-            {{ diff | number : "1.0-0" }}
+          <td class="flex space-x-0.5">
+            <div
+              *ngFor="let diff of differential"
+              class="text-center border h-full w-10"
+              [ngClass]="diffColor(diff)"
+            >
+              {{ diff | number : "1.0-0" }}
+            </div>
           </td>
         </tr>
       </tfoot>
