--- a/src/styles.css
+++ b/src/styles.css
@@ -58,6 +58,11 @@
   );
 }
 
+.grid-cols-18 {
+  display: grid;
+  grid-template-columns: repeat(18, minmax(0, 1fr));
+}
+
 .grid-cols-19 {
   display: grid;
   grid-template-columns: repeat(19, minmax(0, 1fr));
