create body and error box

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -133,7 +133,7 @@
     </div>
   </header>
   <main class="w-full h-full mb-auto overflow-y-auto">
-    <router-outlet></router-outlet>
+    <app-body></app-body>
   </main>
   <footer class="z-10 flex w-full border-t-2 bg-menu-300 border-menu-400">
     <div class="flex w-1/2 mx-5 my-1 space-x-3">
