--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,9 +1,14 @@
-<div *ngIf="errorMessage" class="absolute top-8 w-full flex justify-center">
+<div *ngIf="error" class="absolute top-8 w-full flex justify-center">
   <div
     class="w-96 bg-opacity-90 shadow-xl min-h-16 bg-red-300 rounded-xl border-2 border-red-400"
   >
     <div class="w-full flex">
-      <div class="px-2 font-semibold">Error:</div>
+      <div *ngIf="error.status !== undefined" class="px-2 font-semibold">
+        Error {{ error.status }}:
+      </div>
+      <div *ngIf="error.status === undefined" class="px-2 font-semibold">
+        Error:
+      </div>
       <div class="flex-grow"></div>
       <div
         class="w-6 h-6 pt-1 pr-1 hover:cursor-pointer"
@@ -12,6 +17,8 @@
         <close-svg></close-svg>
       </div>
     </div>
-    <p class="px-2 pb-2">{{ errorMessage }}</p>
+    <div class="px-2 pb-2 space-y-1">
+      <p>{{ error.statusText }}</p>
+    </div>
   </div>
 </div>
