fix screen cut off

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -132,7 +132,7 @@
       </div>
     </div>
   </header>
-  <main class="w-full h-full mb-auto overflow-y-auto fixed">
+  <main class="w-full h-full mb-auto overflow-y-auto">
     <app-body></app-body>
   </main>
   <footer class="z-10 flex w-full border-t-2 bg-menu-300 border-menu-400">
