--- a/src/app/matchup-overview/matchup/matchup.component.html
+++ b/src/app/matchup-overview/matchup/matchup.component.html
@@ -19,7 +19,7 @@
     [typecharts]="matchupData.typechart"
   ></typechart>
   <movechart
-    class="z-10 w-full sm:w-fit max-h-128"
+    class="z-10 w-full sm:w-fit"
     [teams]="matchupData.movechart"
   ></movechart>
   <coveragechart
