--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="error" class="fixed top-24 w-full flex justify-center">
+<div *ngIf="error" @fadeInOut class="fixed top-24 w-full flex justify-center">
   <div
     class="w-96 bg-opacity-90 shadow-xl min-h-16 bg-red-300 rounded-xl border-2 border-red-400"
   >
@@ -17,9 +17,9 @@
         <close-svg></close-svg>
       </div>
     </div>
-    <div class="px-2 pb-2 space-y-1">
-      <p>{{ error.statusText }}</p>
-      <p>{{ error.message }}</p>
+    <!-- fix overflow text -->
+    <div class="px-2 pb-2 space-y-1 overflow-ellipsis whitespace-pre-wrap">
+      {{ error.statusText }}
     </div>
   </div>
 </div>
